# Project-part-1

./: 1  CMakeLists.txt  README.md  aaaa  aaaaaaa  computer_room.cpp  computer_room.h  main.cpp  На доработку
.github/workflows/: main.yml
include/: computerRoom.h  computer_room.h
src/: computerRoom.cpp  computer_room.cpp  main.cpp
tests/: functional_tests.cpp  integration_tests.cpp  system_tests.cpp  thread_safety_tests.cpp  unit_tests.cpp  validation_tests.cpp
